--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,9 +17,10 @@
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 200px;
   border-top: 1px solid #eaeaea;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
